//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  username String [unique, not null]
  departmentId Int [not null]
  department Department [not null]
  tickets Ticket [not null]
}

Table Department {
  id Int [pk, increment]
  name String [not null]
  users User [not null]
}

Table Ticket {
  id Int [pk, increment]
  creatorId Int [not null]
  creator User [not null]
  subject String [not null]
  content String [not null]
  attachments Attachment [not null]
}

Table Attachment {
  id Int [pk, increment]
  ticketId Int [not null]
  ticket Ticket [not null]
  fileLocation String [not null]
}

Ref: User.departmentId > Department.id

Ref: Ticket.creatorId > User.id

Ref: Attachment.ticketId > Ticket.id